--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
     "react-player": "^2.6.2",
     "react-scripts": "4.0.0",
+    "react-ticker": "^1.2.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
