--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Defect",
-  "name": "TBD Defect or Defect Kuwait",
+  "name": "Defect",
   "icons": [
     {
       "src": "favicon.ico",
